# agent-repl

./: .gitignore  EXAMPLES.md  README.md  SKILL.md  agent-tty.py  agent_tty.py  k.py.template  pyproject.toml  pythond.py  test.sh  test_pythond.py
.agent/precedents/: INDEX.yaml
.github/workflows/: ci.yml  release.yml
docs/: CNAME  index.html
man/: agent-tty.1
scripts/: k  km
src/agent_tty/: __init__.py  _shared.py  cli.py  monitor.py
tests/: test.sh  test_bridge_contracts.py  test_contracts.py  test_docs.py  test_pty_posix.py  test_tcp_windows.py
