[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-tty"
version = "0.2.0"
description = "Persistent TTY for AI agents, shared live terminal for humans"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["agent", "terminal", "repl", "ai", "pty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
]

[project.urls]
Homepage = "https://github.com/rangersui/agent-tty"
Repository = "https://github.com/rangersui/agent-tty"

[project.optional-dependencies]
pty = ["pywinpty; sys_platform == 'win32'"]
